--- a/css/tokens.css
+++ b/css/tokens.css
@@ -284,6 +284,7 @@
       &[open]::details-content {
           block-size: 0;
           opacity: 0;
+          transform: translateY(-16px);
       }
   }
 
